--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
 #:schema node_modules/wrangler/config-schema.json
 name = "jingo-nft-frontend"
-compatibility_date = "2025-10-18"
+compatibility_date = "2025-11-07"
 compatibility_flags = ["nodejs_compat"]
 pages_build_output_dir = ".vercel/output/static"
 
@@ -42,9 +42,9 @@ pages_build_output_dir = ".vercel/output/static"
 # Bind a KV Namespace. Use KV as persistent storage for small key-value pairs.
 # Docs: https://developers.cloudflare.com/pages/functions/bindings/#kv-namespaces
 # KV Example:
-[[kv_namespaces]]
-binding = "TOOLS_KV_NAMESPACE"
-id = "7d19c93e926b42108025de1189cc2882"
+# [[kv_namespaces]]
+# binding = "TOOLS_KV_NAMESPACE"
+# id = "7d19c93e926b42108025de1189cc2882"
 
 # Bind a Queue producer. Use this binding to schedule an arbitrary task that may be processed later by a Queue consumer.
 # Docs: https://developers.cloudflare.com/pages/functions/bindings/#queue-producers
